extensionsdir = $(datadir)/$(PACKAGE)/extensions

SUBDIRS =								\
	app								\
	attribute-viewer						\
	category-manager						\
	datasource-viewer						\
	datasource-ufdr							\
	datasource-vfs							\
	date_code							\
	event-viewer							\
	evidence-password-hashes					\
	evidence-viewer							\
	extension-manager						\
	file-explorer							\
	floppy-imager							\
	gigatribe-agent							\
	gtk-ui								\
	hive								\
	hive-report							\
	ice								\
	imagefile-dnd							\
	iped-frontend							\
	kff-manager							\
	lshw-agent							\
	p2p-viewer							\
	part-catalogue							\
	part-model							\
	report-model							\
	report-wizard							\
	sdi-window-manager						\
	skype-agent							\
	skype-agent-sqlite						\
	turing								\
	ui								\
	vfs								\
	vfs-block-view-bitlocker					\
	vfs-block-view-partition-system					\
	vfs-item-attributes

EXTRA_DIST = CMakeLists.txt
